zero-2-hero/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    -
      name: nginx
      image: docker.io/library/nginx:1.27
      imagePullPolicy: Never
      ports:
        - containerPort: 80
