zero-2-hero/serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    -
      protocol: TCP
      port: 81
      targetPort: 80
