zero-2-hero/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    -
      host: nginx.test
      http:
        paths:
          -
            path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 81
